[gd_scene load_steps=18 format=3 uid="uid://cfua5yqnfmigk"]

[ext_resource type="Script" uid="uid://c47vphuakkomi" path="res://scenes/mini_games/maths/maths_mini_game.gd" id="1_f13k7"]
[ext_resource type="FontFile" uid="uid://dhwionra2y06i" path="res://fonts/LA TRUITE A PAPA.ttf" id="2_q12t1"]
[ext_resource type="Texture2D" uid="uid://b24n1oappo8qg" path="res://assets/gui/Button_Blue_3Slides.png" id="3_3hin0"]
[ext_resource type="Texture2D" uid="uid://c3343mi3tfenq" path="res://assets/gui/Button_Blue_3Slides_Pressed.png" id="4_rl4wd"]
[ext_resource type="FontFile" uid="uid://clviw2sxh8aup" path="res://fonts/KnightWarrior-w16n8.otf" id="5_71kec"]
[ext_resource type="Texture2D" uid="uid://bjunpn3deif65" path="res://assets/resources/Carved_9Slides.png" id="6_rl4wd"]
[ext_resource type="Texture2D" uid="uid://b4iy784780g73" path="res://assets/gui/face_on_cross.png" id="7_71kec"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rl4wd"]
bg_color = Color(0.254902, 0.254902, 0.254902, 0.72549)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bn4s1"]
bg_color = Color(0.141176, 0.141176, 0.141176, 0.898039)

[sub_resource type="LabelSettings" id="LabelSettings_wxsqq"]
font = ExtResource("2_q12t1")
font_size = 20
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(1, 5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fgqh2"]
texture = ExtResource("3_3hin0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_co28c"]
texture = ExtResource("4_rl4wd")

[sub_resource type="LabelSettings" id="LabelSettings_1meg7"]
font = ExtResource("5_71kec")
font_size = 48
font_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.2)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_rl4wd"]
font = ExtResource("5_71kec")
font_size = 100
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(1, 6)

[sub_resource type="LabelSettings" id="LabelSettings_71kec"]
font = ExtResource("5_71kec")
font_size = 100
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fgqh2"]
font = ExtResource("5_71kec")
font_size = 36
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pw7ka"]
font = ExtResource("2_q12t1")
font_size = 100
outline_size = 21
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 10)

[node name="MathsMiniGame" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f13k7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rl4wd")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.447059)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(1160, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bn4s1")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 14.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CenterContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "how to play:: (find x) select the right number (click to place)"
label_settings = SubResource("LabelSettings_wxsqq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Button3" type="Button" parent="CenterContainer/Panel/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_fgqh2")
theme_override_styles/hover = SubResource("StyleBoxTexture_fgqh2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_co28c")
theme_override_styles/normal = SubResource("StyleBoxTexture_fgqh2")

[node name="Label" type="Label" parent="CenterContainer/Panel/HBoxContainer/HBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -37.5
offset_right = 54.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
text = "CHECK"
label_settings = SubResource("LabelSettings_1meg7")
horizontal_alignment = 1

[node name="Exit" type="Button" parent="CenterContainer/Panel/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_fgqh2")
theme_override_styles/hover = SubResource("StyleBoxTexture_fgqh2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_co28c")
theme_override_styles/normal = SubResource("StyleBoxTexture_fgqh2")

[node name="Label" type="Label" parent="CenterContainer/Panel/HBoxContainer/HBoxContainer/Exit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -37.5
offset_right = 54.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"
label_settings = SubResource("LabelSettings_1meg7")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Label2" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "2"
label_settings = SubResource("LabelSettings_rl4wd")

[node name="Button" type="Panel" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rl4wd")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/Button/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "X"
label_settings = SubResource("LabelSettings_71kec")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckPopup" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/Button"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -72.0
offset_right = -32.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.10472
pivot_offset = Vector2(94, 32)
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/Button/CheckPopup"]
layout_mode = 2
text = "INCORRECT"
label_settings = SubResource("LabelSettings_fgqh2")

[node name="TextureRect" type="TextureRect" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/Button/CheckPopup"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("7_71kec")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+ 3 = 4"
label_settings = SubResource("LabelSettings_rl4wd")

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Button" type="Panel" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rl4wd")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2/Button/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
label_settings = SubResource("LabelSettings_71kec")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Panel" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rl4wd")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2/Button2/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "4"
label_settings = SubResource("LabelSettings_71kec")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Panel" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rl4wd")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2/Button3/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_71kec")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.0
offset_top = -104.0
offset_right = 203.0
offset_bottom = -4.0
grow_horizontal = 2
text = "Maths Game 0/4"
label_settings = SubResource("LabelSettings_pw7ka")
horizontal_alignment = 1
uppercase = true

[connection signal="pressed" from="CenterContainer/Panel/HBoxContainer/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/HBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="gui_input" from="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_on_button_gui_input"]
[connection signal="gui_input" from="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_button_2_gui_input"]
[connection signal="gui_input" from="CenterContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2/Button3" to="." method="_on_button_3_gui_input"]
